# electrum-server-checker

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-ci.yml  tests.yml
docs/: index.md  requirements.txt
docs/development/: pre-commit.md
docs/guide/: installation.md  usage.md
electrum_server_checker/: __init__.py  checker.py  cli.py
tests/: test_checker.py
